--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./public/icon.webp" type="image/x-icon" />
+    <link rel="shortcut icon" href="/icon.webp" type="image/x-icon" />
     <title>Tomato</title>
   </head>
   <body>
